--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,15 @@
 version: "3"
 
-volumes:
-  postgres_data:
-    driver: local
-
 services:
-  postgres:
-    image: postgres
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    environment:
-      POSTGRES_DB: keycloak
-      POSTGRES_USER: keycloak
-      POSTGRES_PASSWORD: password
   keycloak:
-    image: quay.io/keycloak/keycloak:${KC_VERSION}
-    command: ["start-dev", "--import-realm"]
+    image: quay.io/keycloak/keycloak:25.0.2
+    command: ["start-dev"]
     restart: unless-stopped
     volumes:
     - ./themes/tailwind-example/:/opt/keycloak/themes/tailwind-example/
     environment:
-      KC_DB: postgres
-      KC_DB_USERNAME: keycloak
-      KC_DB_PASSWORD: password
-      KC_DB_URL: "jdbc:postgresql://postgres:5432/keycloak"
-      KC_METRICS_ENABLED: true
-      KC_LOG_LEVEL: ${KC_LOG_LEVEL}
-      KC_REALM_NAME: ${KC_REALM_NAME}
-      KEYCLOAK_ADMIN: ${KEYCLOAK_ADMIN}
-      KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_ADMIN_PASSWORD}
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
     ports:
       - 8443:8443
-      - ${KC_PORT}:8080
-    depends_on:
-      - postgres
+      - 8080:8080
