--- a/.env
+++ b/.env
@@ -1,12 +1,9 @@
 COMPOSE_PROJECT_NAME=keycloak_dev
 
-# releases: https://www.postgresql.org/docs/release
-POSTGRES_VERSION=15.6-alpine
-
 # releases: https://github.com/keycloak/keycloak/releases
-KC_VERSION=24.0.2
+KC_VERSION=25.0.2
 KC_PORT=8080
-KC_REALM_NAME=keycloak
+KC_REALM_NAME=test
 KC_LOG_LEVEL=INFO
 KEYCLOAK_ADMIN=admin
-KEYCLOAK_ADMIN_PASSWORD=keycloak
+KEYCLOAK_ADMIN_PASSWORD=admin
